[package]
name = "skf-api"
version = "0.5.0"
edition = "2021"
authors = [
    "CJ <power4j@outlook.com>",
]
description = """
FFI Types for GM/T 0016-2012(Smart token cryptography application interface specification).
"""
readme = "README.md"
documentation = "https://docs.rs/skf-api"
repository = "https://github.com/power4j/skf-rs"
license = "MIT"
keywords = ["GM", "cryptography", "PKI"]
categories = ["hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]