[package]
name = "skf-sys"
version = "0.1.0"
edition = "2021"
authors = [
    "CJ <power4j@outlook.com>",
]
description = """
Rust bindings for GM/T 0016-2012(Smart token cryptography application interface specification).
"""
readme = "README.md"
documentation = "https://docs.rs/skf-sys"
repository = "https://github.com/power4j/skf-rs"
license = "MIT"
keywords = ["GM", "cryptography", "PKI"]
categories = ["hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skf-api= { path = "../skf-api", version = "0.1.0" }
libloading = "0.8.1"